--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "License inserter for new projects",
   "main": "index.js",
+  "scripts": {
+    "format": "prettier --single-quote --trailing-comma all --no-semi --write 'src/**/*.js' package.json"
+  },
   "repository": "mees-/licker",
   "author": "Mees van Dijk",
   "license": "MIT",
   "dependencies": {
     "exists-sync": "^0.0.4",
     "inquirer": "^3.0.6"
+  },
+  "devDependencies": {
+    "prettier": "^1.5.3"
   },
   "bin": "./index.js"
 }
